--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "jest --watch",
-    "testCoverage": "jest --coverage",
+    "testCoverage": "jest --coverage --watch",
     "start": "nodemon server/index.js"
   },
   "repository": {
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "jest": "^27.0.6",
     "nodemon": "^2.0.10",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "supertest": "^6.1.4"
   }
 }
