--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "jest --watch",
     "testCoverage": "jest --coverage --watch",
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js", 
+    "analyze": "k6 run script.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jest": "^27.0.6",
+    "k6": "^0.0.0",
     "nodemon": "^2.0.10",
     "pg": "^8.6.0",
     "supertest": "^6.1.4"
