--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "test": "jest --watch",
     "testCoverage": "jest --coverage --watch",
-    "start": "nodemon server/index.js", 
-    "analyze": "k6 run script.js"
+    "start": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
